--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,7 +21,7 @@ body {
 	width: 100%;
 	z-index: 999px;
 	box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
-	padding: 10px;
+	padding: 40px;
 	opacity: 0.9;
 }
 
@@ -77,7 +77,7 @@ body {
 } */
 
 
-
+/* Botones */
 .bubbly-button {
 	font-family: "Helvetica", "Arial", sans-serif;
 	display: inline-block;
@@ -93,7 +93,6 @@ body {
 	border-radius: 4px;
 	border: none;
 	cursor: pointer;
-	/* position: relative; */
 	transition: transform ease-in 0.1s, box-shadow ease-in 0.005s;
 	box-shadow: 0 2px 25px rgba(17, 255, 0, 0.5);
   }
@@ -161,3 +160,109 @@ body {
 	  background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
 	}
   }
+
+  /* Título */
+  @import url(https://fonts.googleapis.com/css?family=Varela+Round);
+
+.titulo1 {
+  color: rgba(255, 0, 0, 0.9);
+  font: normal 40px Varela Round, sans-serif;
+  height: 40px;
+  left: 0;
+  letter-spacing: 5px;
+  margin: 0px 0 0 0;
+  position: absolute;
+  text-align: center;
+  text-transform: uppercase;
+  top: 20%;
+  width: 100%;
+  animation: move linear 2000ms infinite;
+}
+
+@keyframes move {
+  0% {
+    text-shadow:
+      4px -4px 0 green,
+      3px -3px 0 green,
+      2px -2px 0 green,
+      1px -1px 0 green,
+      -4px 4px 0 hsla(180, 100%, 50%, 1), 
+      -3px 3px 0 hsla(180, 100%, 50%, 1), 
+      -2px 2px 0 hsla(180, 100%, 50%, 1), 
+      -1px 1px 0 hsla(180, 100%, 50%, 1)
+    ;
+  }
+  25% {    
+    text-shadow:      
+      -4px -4px 0 hsla(180, 100%, 50%, 1), 
+      -3px -3px 0 hsla(180, 100%, 50%, 1), 
+      -2px -2px 0 hsla(180, 100%, 50%, 1), 
+      -1px -1px 0 hsla(180, 100%, 50%, 1),
+      4px 4px 0 rgb(0, 255, 17, 1), 
+      3px 3px 0 rgb(0, 255, 17, 1),
+      2px 2px 0 rgb(0, 255, 17, 1),
+      1px 1px 0 rgb(0, 255, 17,),
+    ;
+  }
+  50% {
+    text-shadow:
+      -4px 4px 0 rgb(58, 170, 38), 
+      -3px 3px 0 rgb(89, 255, 0), 
+      -2px 2px 0 rgb(0, 255, 60), 
+      -1px 1px 0 rgb(26, 255, 0),
+      4px -4px 0 hsla(180, 100%, 50%, 1), 
+      3px -3px 0 hsla(180, 100%, 50%, 1), 
+      2px -2px 0 hsla(180, 100%, 50%, 1), 
+      1px -1px 0 hsla(180, 100%, 50%, 1)
+    ;
+  }
+  75% {
+    text-shadow:
+      4px 4px 0 hsla(180, 100%, 50%, 1), 
+      3px 3px 0 hsla(180, 100%, 50%, 1), 
+      2px 2px 0 hsla(180, 100%, 50%, 1), 
+      1px 1px 0 hsla(180, 100%, 50%, 1),
+      -4px -4px 0 rgb(0, 255, 38), 
+      -3px -3px 0 rgb(55, 255, 0), 
+      -2px -2px 0 rgb(21, 255, 0), 
+      -1px -1px 0 rgb(140, 255, 0)      
+    ;
+  }
+  100% {
+    text-shadow:
+      4px -4px 0 rgb(89, 196, 18), 
+      3px -3px 0 rgb(102, 255, 0), 
+      2px -2px 0 rgb(21, 255, 0), 
+      1px -1px 0 rgb(72, 255, 0),
+      -4px 4px 0 hsla(180, 100%, 50%, 1), 
+      -3px 3px 0 hsla(180, 100%, 50%, 1), 
+      -2px 2px 0 hsla(180, 100%, 50%, 1), 
+      -1px 1px 0 hsla(180, 100%, 50%, 1)
+    ;
+  }  
+}
+
+.resultado{
+	margin-top: 100px;
+	margin-bottom: 50px;
+	text-align: center; 
+	font-family: Comic Sans MS; 
+	font-weight:bold; 
+	font-size: 60px; 
+	color: #1010e8; 
+	text-shadow: -1px 0 #003ac3, 0 1px #2a9e03, 1px 0 #bae510, 0 -1px #01a53d, -2px 2px 0 yellow, 2px 2px 0 yellow, 1px 1px yellow, 2px 2px yellow, 3px 3px yellow, 4px 4px yellow, 5px 5px yellow;
+
+	border-top: 3px solid rgb(59, 218, 1);
+	opacity: 0,5;
+	}
+
+.aa{
+	font-weight: bold;
+	font-size: 2em;
+	border-top: 2px solid rgb(53, 231, 237);
+  	margin: 20px auto 0 auto;
+	opacity: 0,5;
+	
+	/* margin-bottom: 10px; */
+}
+
